Created claimants